[package]
name = "kugelblitz"
version = "0.1.0"
authors = ["Kixiron <kixiron.contact@gmail.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15.0"
sled = "0.30.3"
log = { version = "0.4.8", features = ["kv_unstable"] }
flexi_logger = { version = "0.14.5", features = ["ziplogs", "colors"] }
parking_lot = "0.9.0"
serde = { version = "1.0.104", features = ["derive"] }
bincode = "1.2.1"
console = "0.9.1"
chrono = "0.4.10"
white_rabbit = "0.1.1"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
rev = "c87ea8bf2f2f33da1387716cb0f96820db78881e"
features = ["framework", "standard_framework", "rustls_backend"]