[package]
name = "kugelblitz"
version = "0.1.0"
authors = ["Chase Wilson <contact@chasewilson.dev>"]
edition = "2018"

[dependencies]
sled = "0.30.3"
log = { version = "0.4.8", features = ["kv_unstable"] }
flexi_logger = { version = "0.14.5", features = ["ziplogs", "colors"] }
parking_lot = { version = "0.9.0", features = ["deadlock_detection"] }
serde = { version = "1.0.104", features = ["derive"] }
toml = "0.5.5"
bincode = "1.2.1"
console = "0.9.1"
chrono = "0.4.10"
white_rabbit = "0.1.1"
hey_listen = "0.4.0"
kv-log-macro = "1.0.4"
regex = "1.3.1"
lazy_static = "1.4.0"
base64 = "0.11.0"
Inflector = "0.11.4"
reqwest = { version = "0.10.0", features = ["blocking"] }
tempfile = "3.1.0"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity.git"
rev = "c87ea8bf2f2f33da1387716cb0f96820db78881e"
features = ["framework", "standard_framework", "rustls_backend"]

[profile.dev]
debug-assertions = false

[profile.release]
opt-level = 3
lto = true
debug-assertions = false
codegen-units = 1
